--- a/post/templates/post/post_list_backup.html
+++ b/post/templates/post/post_list_backup.html
@@ -28,6 +28,7 @@
                 <textarea class="form-control" name="body" id="textarea" cols="30" rows="2" placeholder="Post a new message"></textarea>
             </div>
             <div class="d-flex align-items-center">
+                <!--
                 <ul class="mb-0 form-profile__icons">
                     <li class="d-inline-block">
                         <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-user"></i></button>
@@ -41,12 +42,15 @@
                     <li class="d-inline-block">
                         <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-smile"></i></button>
                     </li>
-                </ul>
+
+                </ul> -->
+                <input type="file" id="id_image" class="clearablefileinput" name="image" multiple="" accept="image/*">
                 <button class="btn btn-primary px-3 ml-4">Send</button>
             </div>
         </form>
     </div>
 </div>
+<!--
 <div class="row justify-content-center mt-3">
     <div class="col-md-5 col-sm-12 border-bottom">
         <h5>Add a Post!</h5>
@@ -64,48 +68,47 @@
         </form>
     </div>
 </div>
-
+-->
 <div class="card">
     <div class="card-body">
     {% for post in post_list %}
         <div class="media media-reply">
-            {% if post.shared_user %}
+            {% if post.0.shared_user %}
             <div>
-                <a href="{% url 'account:view' user_id=post.shared_user.profile.pk %}">
-                    <img class="mr-3 circle-rounded" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ post.shared_user.profile_image.url }}" />
+                <a href="{% url 'account:view' user_id=post.0.shared_user.profile.pk %}">
+                    <img class="mr-3 circle-rounded" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ post.0.shared_user.profile_image.url }}" />
                 </a>
-                
             </div>
 
             <div class="media-body">
                 <div class="d-sm-flex justify-content-between mb-2">
-                    <h5 class="mb-sm-0"><a class="text-primary post-link" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.shared_user }}</a> <small class="text-muted ml-3">shared a post on {{ post.shared_on }}</small></h5>
+                    <h5 class="mb-sm-0"><a class="text-primary post-link" href="{% url 'account:view' user_id=post.0.author.profile.pk %}">@{{ post.0.shared_user }}</a> <small class="text-muted ml-3">shared a post on {{ post.0.shared_on }}</small></h5>
                     <div class="media-reply__link" style="display:flex; flex-direction: row;">
-                        <form method="POST" action="{% url 'post:post-like' post.pk %}">
+                        <form method="POST" action="{% url 'post:post-like' post.0.pk %}">
                             {% csrf_token %}
                             <input type="hidden" name="next" value="{{ request.path }}">
                             <button class="btn btn-transparent p-0 mr-3" type="submit">
-                                <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
+                                <i class="far fa-thumbs-up"> <span>{{ post.0.likes.all.count }}</span></i>
                             </button>
                         </form>
 
-                        <form method="POST" action="{% url 'post:post-dislike' post.pk %}">
+                        <form method="POST" action="{% url 'post:post-dislike' post.0.pk %}">
                             {% csrf_token %}
                             <input type="hidden" name="next" value="{{ request.path }}">
                             <button class="btn btn-transparent p-0 mr-3" type="submit">
-                                <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
+                                <i class="far fa-thumbs-down"> <span>{{ post.0.dislikes.all.count }}</span></i>
                             </button>
                         </form>
-                        <span onclick="shareToggle('{{ post.pk }}')"><i class="far fa-share-square share-btn"></i></span>
+                        <span onclick="shareToggle('{{ post.0.pk }}')"><i class="far fa-share-square share-btn"></i></span>
                         <button class="btn btn-transparent p-0 ml-3 font-weight-bold">
-                        <a href="{% url 'post:post-detail' post.pk %}">Reply</a></button>
+                        <a href="{% url 'post:post-detail' post.0.pk %}">Reply ({{post.1}})</a></button>
                     </div>
                 </div>
                 <div class="body-post">
-                    <p>{{ post.shared_body }}</p>
-                    {% if post.image.count > 0 %}
+                    <p>{{ post.0.shared_body }}</p>
+                    {% if post.0.image.count > 0 %}
                       <div class="row">
-                        {% for img in post.image.all %}
+                        {% for img in post.0.image.all %}
                             <div class="col-md-4 col-xs-12">
                                 <img src="{{ img.image.url }}" class="post-image" />
                             </div>
@@ -114,19 +117,19 @@
                     {% endif %}
                 </div>
                 <div class="media mt-3">
-                    <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
-                        <img class="mr-3 circle-rounded" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ post.author.profile_image.url }}" />
+                    <a href="{% url 'account:view' user_id=post.0.author.profile.pk %}">
+                        <img class="mr-3 circle-rounded" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ post.0.author.profile_image.url }}" />
                     </a>
                     <div class="media-body">
                         <div class="d-sm-flex justify-content-between mb-2">
-                            <h5 class="mb-sm-0"><a class="text-primary post-link" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a><small class="text-muted ml-3">{{ post.created_on }}</small></h5>
+                            <h5 class="mb-sm-0"><a class="text-primary post-link" href="{% url 'account:view' user_id=post.0.author.profile.pk %}">@{{ post.0.author }}</a><small class="text-muted ml-3">{{ post.0.created_on }}</small></h5>
                             
                         </div>
                         <div class="body-post">
-                            <p>{{ post.body }}</p>
-                            {% if post.image.count > 0 %}
+                            <p>{{ post.0.body }}</p>
+                            {% if post.0.image.count > 0 %}
                               <div class="row">
-                                {% for img in post.image.all %}
+                                {% for img in post.0.image.all %}
                                     <div class="col-md-4 col-xs-12">
                                         <img src="{{ img.image.url }}" class="post-image" />
                                     </div>
@@ -139,40 +142,40 @@
             </div>
             {% else %}
             <div>
-                <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
-                    <img class="mr-3 circle-rounded" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ post.author.profile_image.url }}" />
+                <a href="{% url 'account:view' user_id=post.0.author.profile.pk %}">
+                    <img class="mr-3 circle-rounded" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ post.0.author.profile_image.url }}" />
                 </a>
             </div>
 
             <div class="media-body">
                 <div class="d-sm-flex justify-content-between mb-2">
-                    <h5 class="mb-sm-0"><a class="text-primary post-link" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> <small class="text-muted ml-3">{{ post.created_on }}</small></h5>
+                    <h5 class="mb-sm-0"><a class="text-primary post-link" href="{% url 'account:view' user_id=post.0.author.profile.pk %}">@{{ post.0.author }}</a> <small class="text-muted ml-3">{{ post.0.created_on }}</small></h5>
                     <div class="media-reply__link" style="display:flex; flex-direction: row;">
-                        <form method="POST" action="{% url 'post:post-like' post.pk %}">
+                        <form method="POST" action="{% url 'post:post-like' post.0.pk %}">
                             {% csrf_token %}
                             <input type="hidden" name="next" value="{{ request.path }}">
                             <button class="btn btn-transparent p-0 mr-3" type="submit">
-                                <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
+                                <i class="far fa-thumbs-up"> <span>{{ post.0.likes.all.count }}</span></i>
                             </button>
                         </form>
 
-                        <form method="POST" action="{% url 'post:post-dislike' post.pk %}">
+                        <form method="POST" action="{% url 'post:post-dislike' post.0.pk %}">
                             {% csrf_token %}
                             <input type="hidden" name="next" value="{{ request.path }}">
                             <button class="btn btn-transparent p-0 mr-3" type="submit">
-                                <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
+                                <i class="far fa-thumbs-down"> <span>{{ post.0.dislikes.all.count }}</span></i>
                             </button>
                         </form>
-                        <span onclick="shareToggle('{{ post.pk }}')"><i class="far fa-share-square share-btn"></i></span>
+                        <span onclick="shareToggle('{{ post.0.pk }}')"><i class="far fa-share-square share-btn"></i></span>
                         <button class="btn btn-transparent p-0 ml-3 font-weight-bold">
-                        <a href="{% url 'post:post-detail' post.pk %}">Reply</a></button>
+                        <a href="{% url 'post:post-detail' post.0.pk %}">Reply ({{post.1}})</a></button>
                     </div>
                 </div>
                 <div class="body-post">
-                    <p>{{ post.body }}</p>
-                    {% if post.image.count > 0 %}
+                    <p>{{ post.0.body }}</p>
+                    {% if post.0.image.count > 0 %}
                       <div class="row">
-                        {% for img in post.image.all %}
+                        {% for img in post.0.image.all %}
                             <div class="col-md-4 col-xs-12">
                                 <img src="{{ img.image.url }}" class="post-image" />
                             </div>
@@ -182,31 +185,34 @@
                 </div>
             </div>
             {% endif %}
-            <!--
-            {% if post.shared_body %}
-            <div class="position-relative border-bottom mb-3 body-post"> 
-                <p>{{ post.shared_body }}</p>
-            </div>
-            <div class="shared-post">
-                <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
-                    <img class="round-circle " style="float: left;margin-right: 1rem;" height="30" width="30" src="{{ post.author.profile_image.url }}" />
-                </a>
-                <p style="padding-top: 0.5rem;">
-                    <a class="text-primary" style="text-decoration: none;" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
-                </p>
-            </div>
-            {% endif %}-->
-            
-            <!--<a href="{% url 'post:post-detail' post.pk %}" class="stretched-link"></a>-->
         </div>
+        <form method="POST" action="{% url 'post:share-post' post.0.pk %}" class="d-none" id="{{ post.0.pk }}">
+            {% csrf_token %}
+            {{ shareform | crispy }}
+            <div class="d-grid gap-2">
+                <button class="btn btn-success mt-3">share the post</button>
+            </div>
+        </form>
     {% endfor %}
     </div>
 </div>
+<!--
+<script src="https://cdn.tiny.cloud/1/havldrt4zgo6yunsmxmsi0xltdkxj3wix14yetpjmxf1tyqw/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 
+<script>
+  tinymce.init({
+    selector: 'textarea',
+    plugins: "emoticons",
+    toolbar: "emoticons",
+    toolbar_location: "bottom",
+    menubar: false
+  });
+</script>-->
 <script>
     function shareToggle(parent_id) {
         const row = document.getElementById(parent_id);
-
+        console.log(parent_id)
+        console.log(row)
         if (row.classList.contains('d-none')) {
             row.classList.remove('d-none');
         } else {
