--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -369,6 +369,11 @@
                             <i class="fas fa-layer-group"></i><span class="nav-text">Forum</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="{% url 'marketplace:marketplace-home' %}" aria-expanded="false">
+                            <i class="fas fa-store"></i><span class="nav-text">Marketplace</span>
+                        </a>
+                    </li>
                     <li class="nav-label">Profile</li>
                     <li>
                         <a href="{% url 'account:view' user_id=request.user.id %}" aria-expanded="false">
