--- a/templates/layout-blank.html
+++ b/templates/layout-blank.html
@@ -86,6 +86,7 @@
         .logo-small{
             max-width: 3rem !important;
         }
+
     </style>
 
 </head>
@@ -351,49 +352,53 @@
                 <ul class="metismenu" id="menu">
                     <li>
                         <a href="{% url 'home' %}" aria-expanded="false">
-                            <i class="fas fa-home"></i><span class="nav-text">Home</span>
+                            <i class="fas fa-home" style="color: white !important;"></i><span class="nav-text" style="color: white !important;">Home</span>
                         </a>
                     </li>
-                    <li class="nav-label">Apps</li>
+                    <li class="nav-label" style="color: white !important;">Apps</li>
                     <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="far fa-comment-dots"></i> <span class="nav-text">Chat</span>
+                            <i class="far fa-comment-dots" style="color: white !important;"></i> <span class="nav-text" style="color: white !important;">Chat</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="{% url 'public_chat:public_chat_room' %}">Public Chat</a></li>
-                            <li><a href="{% url 'chat:private-chat-room' %}">Private Chat</a></li>
+                            <li><a href="{% url 'public_chat:public_chat_room' %}" style="color: white !important;">Public Chat</a></li>
+                            <li><a href="{% url 'chat:private-chat-room' %}" style="color: white !important;">Private Chat</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="{% url 'forum:forum-topic' %}" aria-expanded="false">
-                            <i class="fas fa-layer-group"></i><span class="nav-text">Forum</span>
+                            <i class="fas fa-layer-group" style="color: white !important;"></i><span class="nav-text" style="color: white !important;">Forum</span>
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'marketplace:marketplace-home' %}" aria-expanded="false">
-                            <i class="fas fa-store"></i><span class="nav-text">Marketplace</span>
+                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                            <i class="fas fa-store" style="color: white !important;"></i> <span class="nav-text" style="color: white !important;">Marketplace</span>
                         </a>
+                        <ul aria-expanded="false">
+                            <li><a href="{% url 'marketplace:marketplace-home' %}" style="color: white !important;">Buying</a></li>
+                            <li><a href="{% url 'marketplace:marketplace-home' %}" style="color: white !important;">Selling</a></li>
+                        </ul>
                     </li>
-                    <li class="nav-label">Profile</li>
+                    <li class="nav-label" style="color: white !important;">Profile</li>
                     <li>
                         <a href="{% url 'account:view' user_id=request.user.id %}" aria-expanded="false">
-                            <i class="far fa-user"></i><span class="nav-text">Account</span>
+                            <i class="far fa-user" style="color: white !important;"></i><span class="nav-text" style="color: white !important;">Account</span>
                         </a>
                     </li>
                     <li>
                         <a href="{% url 'friend:list' user_id=request.user.id %}" aria-expanded="false">
-                            <i class="fas fa-user-friends"></i><span class="nav-text">Friends</span>
+                            <i class="fas fa-user-friends" style="color: white !important;"></i><span class="nav-text" style="color: white !important;">Friends</span>
                         </a>
                     </li>
-                    <li class="nav-label">Settings</li>
+                    <li class="nav-label" style="color: white !important;">Settings</li>
                     <li>
                         <a href="#" aria-expanded="false">
-                            <i class="fas fa-info-circle"></i><span class="nav-text">About</span>
+                            <i class="fas fa-info-circle" style="color: white !important;"></i><span class="nav-text" style="color: white !important;">About</span>
                         </a>
                     </li>
                     <li>
                         <a href="#" aria-expanded="false">
-                            <i class="fas fa-cogs"></i><span class="nav-text">Setting</span>
+                            <i class="fas fa-cogs" style="color: white !important;"></i><span class="nav-text" style="color: white !important;">Setting</span>
                         </a>
                     </li>
                 </ul>
