--- a/marketplace/templates/marketplace/marketplace.html
+++ b/marketplace/templates/marketplace/marketplace.html
@@ -3,10 +3,6 @@
 {% load humanize %}
 {% block post %}
 <style>
-    body {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-    }
 
     .post-module {
         position: relative;
@@ -339,8 +335,8 @@
         {% endfor %}
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ==" crossorigin="anonymous"></script>
+{% endblock post %}
+{% block javascript %}
 <script>
     $(window).on('load', function(){
       $('.post-module').hover(function() {
@@ -351,5 +347,5 @@
       });
     });
 </script>
+{% endblock javascript %}
 
-{% endblock post %}
